@@ -30,3 +30,4 @@ reporting bugs, providing fixes, suggesting useful features or other:
 	Arcadiy Ivanov <https://github.com/arcivanov>
 	Dmitriy Blok <https://github.com/dmitriyblok>
 	Oleander Reis <https://github.com/oleeander>
+	Michael Johansen <https://github.com/mijohansen>
