@@ -1,3 +1,7 @@
+11/06/2018
+- make sure opts.discovery is resolved when "iss" is returned as part of the
+  authorization response; see #224 ; thanks @mijohansen
+
 11/03/2018
 - we no longer verify the issuer field of the discovery document points
   to a parent URI of the discovery document's location; see #219
